--- a/src/autogen.ipynb
+++ b/src/autogen.ipynb
@@ -16,21 +16,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting pyautogen\n",
-      "  Downloading pyautogen-0.2.28-py3-none-any.whl.metadata (25 kB)\n",
-      "Collecting diskcache (from pyautogen)\n",
-      "  Downloading diskcache-5.6.3-py3-none-any.whl.metadata (20 kB)\n",
-      "Collecting docker (from pyautogen)\n",
-      "  Downloading docker-7.1.0-py3-none-any.whl.metadata (3.8 kB)\n",
-      "Collecting flaml (from pyautogen)\n",
-      "  Downloading FLAML-2.1.2-py3-none-any.whl.metadata (15 kB)\n",
+      "Requirement already satisfied: pyautogen in /Users/soeren/opt/anaconda3/envs/openai/lib/python3.9/site-packages (0.2.28)\n",
+      "Requirement already satisfied: diskcache in /Users/soeren/opt/anaconda3/envs/openai/lib/python3.9/site-packages (from pyautogen) (5.6.3)\n",
+      "Requirement already satisfied: docker in /Users/soeren/opt/anaconda3/envs/openai/lib/python3.9/site-packages (from pyautogen) (7.1.0)\n",
+      "Requirement already satisfied: flaml in /Users/soeren/opt/anaconda3/envs/openai/lib/python3.9/site-packages (from pyautogen) (2.1.2)\n",
       "Requirement already satisfied: numpy<2,>=1.17.0 in /Users/soeren/opt/anaconda3/envs/openai/lib/python3.9/site-packages (from pyautogen) (1.26.1)\n",
       "Requirement already satisfied: openai>=1.3 in /Users/soeren/opt/anaconda3/envs/openai/lib/python3.9/site-packages (from pyautogen) (1.30.4)\n",
       "Requirement already satisfied: packaging in /Users/soeren/opt/anaconda3/envs/openai/lib/python3.9/site-packages (from pyautogen) (23.2)\n",
       "Requirement already satisfied: pydantic!=2.6.0,<3,>=1.10 in /Users/soeren/opt/anaconda3/envs/openai/lib/python3.9/site-packages (from pyautogen) (2.4.2)\n",
       "Requirement already satisfied: python-dotenv in /Users/soeren/opt/anaconda3/envs/openai/lib/python3.9/site-packages (from pyautogen) (1.0.1)\n",
-      "Collecting termcolor (from pyautogen)\n",
-      "  Using cached termcolor-2.4.0-py3-none-any.whl.metadata (6.1 kB)\n",
+      "Requirement already satisfied: termcolor in /Users/soeren/opt/anaconda3/envs/openai/lib/python3.9/site-packages (from pyautogen) (2.4.0)\n",
       "Requirement already satisfied: tiktoken in /Users/soeren/opt/anaconda3/envs/openai/lib/python3.9/site-packages (from pyautogen) (0.7.0)\n",
       "Requirement already satisfied: anyio<5,>=3.5.0 in /Users/soeren/opt/anaconda3/envs/openai/lib/python3.9/site-packages (from openai>=1.3->pyautogen) (3.7.1)\n",
       "Requirement already satisfied: distro<2,>=1.7.0 in /Users/soeren/opt/anaconda3/envs/openai/lib/python3.9/site-packages (from openai>=1.3->pyautogen) (1.9.0)\n",
@@ -48,18 +43,7 @@
       "Requirement already satisfied: certifi in /Users/soeren/opt/anaconda3/envs/openai/lib/python3.9/site-packages (from httpx<1,>=0.23.0->openai>=1.3->pyautogen) (2023.7.22)\n",
       "Requirement already satisfied: httpcore==1.* in /Users/soeren/opt/anaconda3/envs/openai/lib/python3.9/site-packages (from httpx<1,>=0.23.0->openai>=1.3->pyautogen) (1.0.5)\n",
       "Requirement already satisfied: h11<0.15,>=0.13 in /Users/soeren/opt/anaconda3/envs/openai/lib/python3.9/site-packages (from httpcore==1.*->httpx<1,>=0.23.0->openai>=1.3->pyautogen) (0.14.0)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/soeren/opt/anaconda3/envs/openai/lib/python3.9/site-packages (from requests>=2.26.0->docker->pyautogen) (3.3.1)\n",
-      "Downloading pyautogen-0.2.28-py3-none-any.whl (284 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m284.6/284.6 kB\u001b[0m \u001b[31m1.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hDownloading diskcache-5.6.3-py3-none-any.whl (45 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m45.5/45.5 kB\u001b[0m \u001b[31m4.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hDownloading docker-7.1.0-py3-none-any.whl (147 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m147.8/147.8 kB\u001b[0m \u001b[31m1.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hDownloading FLAML-2.1.2-py3-none-any.whl (296 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m296.7/296.7 kB\u001b[0m \u001b[31m1.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hUsing cached termcolor-2.4.0-py3-none-any.whl (7.7 kB)\n",
-      "Installing collected packages: termcolor, flaml, diskcache, docker, pyautogen\n",
-      "Successfully installed diskcache-5.6.3 docker-7.1.0 flaml-2.1.2 pyautogen-0.2.28 termcolor-2.4.0\n"
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/soeren/opt/anaconda3/envs/openai/lib/python3.9/site-packages (from requests>=2.26.0->docker->pyautogen) (3.3.1)\n"
      ]
     }
    ],
